k8s/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memes-api
  namespace: openmeme
  labels:
    app.kubernetes.io/name: memes-api
    app.kubernetes.io/part-of: openmeme
spec:
  type: ClusterIP
  selector:
    app: memes-api
  ports:
    - port: 80
      targetPort: 8080
      name: http
